Update thumbnail label and heading text

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div id="panorama" hidden class="flex-grow-1"></div>
       <p class="lead">
         <span id="select">
-          To start, select a thumbnail below
+          To start, select an image below
           <br>
         </span>
         <span id="reselect" hidden>
@@ -33,7 +33,7 @@
       </p>
     </main>
 
-<h4>Thunbnails</h4>
+<h4>Interior Upstairs</h4>
       
     <div class="lead d-flex flex-row align-items-center">
       <div class="d-flex flex-column">
