Update title and header for Midlakes 360 Gallery

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Midlakes 360 image viewer</title>
+    <title>Midlakes 360 Gallery</title>
     <link rel="stylesheet" href="/bootstrap.min.css"/>
     <link rel="stylesheet" href="/pannellum.css"/>
     <link rel="stylesheet" href="/style.css"/>
@@ -12,9 +12,10 @@
 <body>
   <div class="d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header class="masthead d-flex flex-row align-items-center mb-4 text-center">
-      <h3 class="masthead-brand m-0">Midlakes 360 image viewer</h3>
+      <h3 class="masthead-brand m-0">Midlakes 360 Gallery</h3>
       <h4 class="flex-grow-1 m-0" id="filename"></h4>
-      <span>Based on <a href="https://pannellum.org/">Pannellum</a></span>
+      <!-- <span>Based on <a href="https://pannellum.org/">Pannellum</a></span> -->
+    <div id="navigation"> Exterior Deck | Exterior Grounds | Exterior Pier | Interior Upstairs | Interior Main | Interior Downstairs </div>
     </header>
 
     <main role="main" class="d-flex flex-column flex-grow-1 align-items-center justify-content-center text-center">
