Replace example images with exterior deck images

--- a/index.html
+++ b/index.html
@@ -39,10 +39,42 @@
       
     <div class="lead d-flex flex-row align-items-center">
       <div class="d-flex flex-column">
-        <a href="#" class="example"><img src="/example.jpg" width="100" alt="Upstairs 1" /></a>
+        <a href="#" class="example"><img src="/images/exterior-deck/ext-deck-01.jpeg" width="100" alt="Exterior Deck 1" /></a>
       </div>
       <div class="d-flex flex-column">
-        <a href="#" class="example"><img src="/example2.jpg" width="100" alt="Upstairs 2" /></a>
+        <a href="#" class="example"><img src="/images/exterior-deck/ext-deck-02.jpeg" width="100" alt="Exterior Deck 2" /></a>
+      </div>
+
+      <div class="d-flex flex-column">
+        <a href="#" class="example"><img src="/images/exterior-deck/ext-deck-03.jpeg" width="100" alt="Exterior Deck 3" /></a>
+      </div>
+
+      <div class="d-flex flex-column">
+        <a href="#" class="example"><img src="/images/exterior-deck/ext-deck-04.jpeg" width="100" alt="Exterior Deck 4" /></a>
+      </div>
+
+      <div class="d-flex flex-column">
+        <a href="#" class="example"><img src="/images/exterior-deck/ext-deck-05.jpeg" width="100" alt="Exterior Deck 5" /></a>
+      </div>
+
+      <div class="d-flex flex-column">
+        <a href="#" class="example"><img src="/images/exterior-deck/ext-deck-06.jpeg" width="100" alt="Exterior Deck 6" /></a>
+      </div>
+
+      <div class="d-flex flex-column">
+        <a href="#" class="example"><img src="/images/exterior-deck/ext-deck-07.jpeg" width="100" alt="Exterior Deck 7" /></a>
+      </div>
+
+     <div class="d-flex flex-column">
+        <a href="#" class="example"><img src="/images/exterior-deck/ext-deck-08.jpeg" width="100" alt="Exterior Deck 8" /></a>
+      </div>
+
+     <div class="d-flex flex-column">
+        <a href="#" class="example"><img src="/images/exterior-deck/ext-deck-09.jpeg" width="100" alt="Exterior Deck 9" /></a>
+      </div>
+
+              <div class="d-flex flex-column">
+        <a href="#" class="example"><img src="/images/exterior-deck/ext-deck-10.jpeg" width="100" alt="Exterior Deck 10" /></a>
       </div>
     </div>
 
