--- a/exterior-deck.html
+++ b/exterior-deck.html
@@ -12,7 +12,7 @@
 <body>
   <div class="d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header class="masthead d-flex flex-row align-items-center mb-4 text-center">
-      <h3 class="masthead-brand m-0">Midlakes Exterior Deck</h3>
+      <h3 class="masthead-brand m-0"><a href="/">Midlakes</a></h3>
       <h4 class="flex-grow-1 m-0" id="filename"></h4>
     <div id="navigation"> <strong><a href="/exterior-deck.html">Exterior Deck</a></strong> | <a href="/exterior-grounds.html">Exterior Grounds</a> | <a href="/exterior-pier.html">Exterior Pier</a> | <a href="/interior-upstairs.html">Interior Upstairs</a> | <a href="interior-main.html">Interior Main</a> | <a href="interior-downstairs.html">Interior Downstairs</a> </div>
     </header>
