Format navigation links for better readability

--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
     <header class="masthead d-flex flex-row align-items-center mb-4 text-center">
       <h3 class="masthead-brand m-0"><a href="/">Midlakes</a></h3>
       <h4 class="flex-grow-1 m-0" id="filename"></h4>
-    <div id="navigation"> <a href="/exterior-deck.html">Exterior Deck</a> | <a href="/exterior-grounds.html">Exterior Grounds</a> | <a href="/exterior-pier.html">Exterior Pier</a> | <a href="/interior-upstairs.html">Interior Upstairs</a> | <a href="interior-main.html">Interior Main</a> | <a href="interior-downstairs.html">Interior Downstairs</a> </div>
+    <div id="navigation"> 
+        <a href="/exterior-deck.html">Exterior Deck</a> | 
+        <a href="/exterior-grounds.html">Exterior Grounds</a> | 
+        <a href="/exterior-pier.html">Exterior Pier</a> | 
+        <a href="/interior-upstairs.html">Interior Upstairs</a> | 
+        <a href="interior-main.html">Interior Main</a> | 
+        <a href="interior-downstairs.html">Interior Downstairs</a> 
+    </div>
     </header>
 
     <main role="main" class="d-flex flex-column flex-grow-1 align-items-center justify-content-center text-center">
