Update header and section title for Exterior Grounds

--- a/exterior-grounds.html
+++ b/exterior-grounds.html
@@ -19,8 +19,8 @@
         <strong><a href="/exterior-grounds.html">Exterior Grounds</a></strong> | 
         <a href="/exterior-pier.html">Exterior Pier</a> |
         <a href="/interior-upstairs.html">Interior Upstairs</a> | 
-        <a href="interior-main.html">Interior Main</a> | 
-        <a href="interior-downstairs.html">Interior Downstairs</a> 
+        <a href="/interior-main.html">Interior Main</a> | 
+        <a href="/interior-downstairs.html">Interior Downstairs</a> 
     </div>
     </header>
 
@@ -43,7 +43,7 @@
       </p>
     </main>
 
-<h4>Exterior Deck</h4>
+<h4>Exterior Grounds</h4>
       
     <div class="lead d-flex flex-row align-items-center">
         
